[OT-538] Fix some alignment issues

--- a/src/exchange/tradingPair/TradingPairView.scss
+++ b/src/exchange/tradingPair/TradingPairView.scss
@@ -215,10 +215,18 @@ $sm: 400px;
 
     .iconQuote {
       margin-right: 8px;
+      padding: 0;
+    }
+
+    .iconBase {
+      padding: 0 0 0 8px;
+
+      @include media-breakpoint-down($sm) {
+        padding: 0;
+      }
     }
 
     .iconBase, .iconQuote {
-      padding: 0;
       height: 26px;
     }
 
@@ -254,7 +262,7 @@ $sm: 400px;
     .priceDiff {
       width: 58px;
       text-align: right;
-      padding-right: 20px;
+      padding-right: 10px;
     }
 }
 
